// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context menu tests rightclick scalar strings " 1`] = `
Array [
  "id",
  "scalar",
  "18",
  "\\"",
]
`;

exports[`context menu tests rightclick scalar strings "*" 1`] = `
Array [
  "id",
  "scalar",
  "27",
  "\\"*\\"",
]
`;

exports[`context menu tests rightclick scalar strings ' 1`] = `
Array [
  "id",
  "scalar",
  "19",
  "'",
]
`;

exports[`context menu tests rightclick scalar strings * 1`] = `
Array [
  "id",
  "scalar",
  "26",
  "*",
]
`;

exports[`context menu tests rightclick scalar strings , 1`] = `
Array [
  "id",
  "scalar",
  "20",
  ",",
  "21",
  ",",
]
`;

exports[`context menu tests rightclick scalar strings ; 1`] = `
Array [
  "id",
  "scalar",
  "22",
  ";",
]
`;

exports[`context menu tests rightclick scalar strings - 1`] = `
Array [
  "id",
  "scalar",
  "16",
  "-",
]
`;

exports[`context menu tests rightclick scalar strings 1.1.1.1 1`] = `
Array [
  "id",
  "scalar",
  "28",
  "1.1.1.1",
]
`;

exports[`context menu tests rightclick scalar strings ∫£œßü™ 1`] = `
Array [
  "id",
  "scalar",
  "23",
  "∫£œßü™",
]
`;
